@@ -1,3 +1,10 @@
+2022-03-09 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c,
+	  src/mos6502/main.c,
+	  src/mos6502/ralloc.h:
+	  Avoid marking the accumulator dirty after a compare operation.
+
 2022-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sdas/asxxsrc/asmain.c,
@@ -10,7 +17,7 @@
 
 	* src/mos6502/peeph.def:
 	  Add rules for redundant stores after loads.
-	* device/lib/mos6502/crt0.s
+	* device/lib/mos6502/crt0.s:
 	  Use ZP for memcpy and memset parameters.
 
 2022-03-09 Philipp Klaus Krause <pkk AT spth.de>
